--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rwa",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Wattanai cokcok",
+  "homepage": "www.raot.co.th",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -19,8 +19,18 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@angular/service-worker": "~11.2.0",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/core": "^5.32.1",
+    "@ionic-native/device": "^5.32.1",
+    "@ionic-native/geolocation": "^5.32.1",
+    "@ionic-native/network-interface": "^5.32.1",
     "@ionic/angular": "^5.5.2",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-plugin-networkinterface": "^2.0.0",
+    "moment": "^2.29.1",
+    "ngx-device-detector": "^2.0.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
