--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "@ionic-native/geolocation": "^5.32.1",
     "@ionic-native/network-interface": "^5.32.1",
     "@ionic/angular": "^5.5.2",
+    "@ng-idle/core": "^10.0.0-beta.1",
+    "@ng-idle/keepalive": "^10.0.0-beta.1",
+    "angular2-moment": "^1.9.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-networkinterface": "^2.0.0",
+    "ionic-selectable": "^4.8.0",
     "moment": "^2.29.1",
     "ngx-device-detector": "^2.0.7",
     "rxjs": "~6.6.0",
