--- a/package.json
+++ b/package.json
@@ -24,14 +24,22 @@
     "@ionic-native/core": "^5.32.1",
     "@ionic-native/device": "^5.32.1",
     "@ionic-native/geolocation": "^5.32.1",
-    "@ionic-native/network-interface": "^5.32.1",
+    "@ionic-native/in-app-browser": "^5.33.1",
+    "@ionic-native/network-interface": "^5.33.1",
     "@ionic/angular": "^5.5.2",
     "@ng-idle/core": "^10.0.0-beta.1",
     "@ng-idle/keepalive": "^10.0.0-beta.1",
     "angular2-moment": "^1.9.0",
-    "cordova-plugin-device": "^2.0.3",
+    "cordova-android": "7.0.0",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-plugin-inappbrowser": "^5.0.0",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-networkinterface": "^2.0.0",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-selectable": "^4.8.0",
     "moment": "^2.29.1",
     "ngx-device-detector": "^2.0.7",
@@ -72,5 +80,20 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.0.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
