--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-selectable": "^4.8.0",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.39",
     "ngx-device-detector": "^2.0.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
